fix text alignment on about page

--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,8 @@ section {
   margin-top: 100px;
   box-sizing: border-box; }
   #about h4 {
-    font-weight: 300; }
+    font-weight: 300;
+    text-align: justify; }
   #about p.footnote {
     font-size: 15px; }
   #about div {
