--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -3,6 +3,7 @@
   box-sizing: border-box;
   h4 {
     font-weight: 300;
+    text-align: justify;
   }
   p.footnote {
     font-size: 15px;
